--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <nav>
-            <a href="/HomePage/index.html">Home</a>
-            <a href="/Contact/contacts.html">Contacts</a>
-            <a href="/About/about.html">About</a>
+            <a href="index.html">Home</a>
+            <a href="contacts.html">Contacts</a>
+            <a href="about.html">About</a>
         </nav>
     </header>
 
@@ -20,7 +20,7 @@
         <!-- list item -->
         <div class="list">
             <div class="item">
-                <img src="/images/img4.jpg">
+                <img src="img4.jpg">
                 <div class="content">
                     <div class="title">Tobacco Heaven</div>
                     <div class="topic">Explore our selection of premium cigars, cigarettes, and e-cigars.</div>
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="/images/shop1.jpg">
+                <img src="shop1.jpg">
                 <div class="content">
                     <div class="title">Beach Essentials</div>
                     <div class="topic">Discover must-have gear for the beach, including water masks, sunscreens, and beach towels.</div>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="/images/shop2.png">
+                <img src="shop2.png">
                 <div class="content">
                     <div class="title">Everyday Essentials</div>
                     <div class="topic">Explore our one-stop shop for all your daily needs, from drinks and snacks to sweets and more.</div>
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="/images/img1.jpg">
+                <img src="img1.jpg">
                 <div class="content">
                     <div class="title">Tech Corner</div>
                     <div class="topic">Explore our selection of tech essentials, including chargers, USBs and more.</div>
@@ -73,7 +73,7 @@
         <!-- list thumnail -->
         <div class="thumbnail">
             <div class="item">
-                <img src="/images/img4.jpg">
+                <img src="img4.jpg">
                 <div class="content">
                     <div class="title">
                         Tobacco Haven
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="/images/shop1.jpg">
+                <img src="shop1.jpg">
                 <div class="content">
                     <div class="title">
                         Beach Essentials
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="/images/shop2.png">
+                <img src="shop2.png">
                 <div class="content">
                     <div class="title">
                         Everyday Essentials
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="/images/img1.jpg">
+                <img src="img1.jpg">
                 <div class="content">
                     <div class="title">
                         Tech Corner
