--- a/about.html
+++ b/about.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/About/styleabout.css">
+    <link rel="stylesheet" href="styleabout.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="/HomePage/index.html">Home</a>
-            <a href="/Contact/contacts.html">Contacts</a>
-            <a href="/About/about.html">About</a>
+            <a href="index.html">Home</a>
+            <a href="contacts.html">Contacts</a>
+            <a href="about.html">About</a>
         </nav>
     </header>
     <div class="main">
