--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chirstos Market in Molivos Lesvos. Cigarettes - Tabacco - Souvenirs.</title>
     <link rel="stylesheet" href="styleabout.css">
 </head>
 <body>
