--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                     <div class="title">
                         Tobacco Haven
                     </div>
-                    <div class="description">
+                    <!--<div class="description">
                         Indulge in lux...
-                    </div>
+                    </div>  -->
                 </div>
             </div>
             <div class="item">
@@ -89,9 +89,9 @@
                     <div class="title">
                         Beach Essentials
                     </div>
-                    <div class="description">
+                    <!--<div class="description">
                         Ensure a worry-free ...
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="item">
@@ -100,9 +100,9 @@
                     <div class="title">
                         Everyday Essentials
                     </div>
-                    <div class="description">
+                    <!--<div class="description">
                         Dive into our ...
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="item">
@@ -111,9 +111,9 @@
                     <div class="title">
                         Tech Corner
                     </div>
-                    <div class="description">
+                    <!--<div class="description">
                         Discover a world of ...
-                    </div>
+                    </div>  -->
                 </div>
             </div>
         </div>
