--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <div class="container">        
             <div class="box" id="box1">
                 <div class="title"><u>WHO WE ARE</u></div>
-                <div class="descr">Led by owner Egglezos Christos, "Christos Market" is more than just a convenience - souvenir store. it's a family affair. Alongside his wife Sofia, Christos brings over 30 years of industry experience to the forefront, ensuring that every customer receives personalized attention and top-notch service. From our family to yours, we're dedicated to providing quality products and an unforgettable shopping experience.</div>
+                <div class="descr">Led by owner Christos, "Christos Market" is more than just a convenience - souvenir store. it's a family affair. Alongside his wife Sofia, Christos brings over 30 years of industry experience to the forefront, ensuring that every customer receives personalized attention and top-notch service. From our family to yours, we're dedicated to providing quality products and an unforgettable shopping experience.</div>
             </div>
             <div class="box" id="box2"></div>
             <div class="box" id="box4">
